# streamlit-apps

entites/1st_app/: analyzer.py  main.py  pyproject.toml  utils.py
