[tool.poetry]
name = "1st_app"
version = "0.1.0"
description = ""
authors = ["Ahmed Sultan <ahmed.khaled4941@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
streamlit = "^0.85.1"
pandas = "^1.3.1"
matplotlib = "^3.4.2"
validators = "^0.18.2"
textrazor = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
